[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet staking"
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "darwinia-staking"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.6.8"

[dependencies]
# crates.io
codec             = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
log               = { version = "0.4.14" }
serde             = { version = "1.0.127", optional = true }
static_assertions = { version = "1.1.0" }
# darwinia-network
darwinia-staking-rpc-runtime-api = { default-features = false, path = "./rpc/runtime-api" }
darwinia-support                 = { default-features = false, path = "../support" }
# encointer
substrate-fixed = { default-features = false, git = "https://github.com/encointer/substrate-fixed", branch = "master" }
# paritytech
frame-election-provider-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
frame-support                   = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
frame-system                    = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
pallet-authorship               = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
pallet-session                  = { default-features = false, features = ["historical"], git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
sp-arithmetic                   = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
sp-core                         = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
sp-io                           = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
sp-runtime                      = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
sp-staking                      = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
sp-std                          = { default-features = false, git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }

[dev-dependencies]
# crates.io
rand_chacha = { version = "0.3.0" }
# darwinia-network
darwinia-balances = { path = "../../frame/balances" }
darwinia-support  = { features = ["easy-testing"], path = "../support" }
# paritytech
max-encoded-len      = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
pallet-timestamp     = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
sp-storage           = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
sp-tracing           = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }
substrate-test-utils = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.5" }


[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"serde",
	# darwinia-network
	"darwinia-staking-rpc-runtime-api/std",
	"darwinia-support/std",
	# encointer
	"substrate-fixed/std",
	# paritytech
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
]

try-runtime = ["frame-support/try-runtime"]
