[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet staking"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-staking"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.12"

[dependencies]
# crates.io
codec             = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
scale-info        = { version = "1.0", default-features = false, features = ["derive"] }
serde             = { version = "1.0", optional = true }
static_assertions = { version = "1.1" }
# darwinia-network
darwinia-support = { default-features = false, path = "../support" }
# encointer
substrate-fixed = { default-features = false, git = "https://github.com/encointer/substrate-fixed", tag = "v0.5.8" }
# paritytech
frame-election-provider-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
frame-support                   = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
frame-system                    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
pallet-authorship               = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
pallet-session                  = { default-features = false, features = ["historical"], git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-arithmetic                   = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-core                         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-io                           = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-runtime                      = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-staking                      = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-std                          = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }

[dev-dependencies]
# crates.io
rand_chacha = { version = "0.3" }
# darwinia-network
darwinia-balances = { path = "../../frame/balances" }
# paritytech
frame-benchmarking              = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
frame-election-provider-support = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
pallet-timestamp                = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-storage                      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
sp-tracing                      = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }
substrate-test-utils            = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.3" }


[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	"serde",
	# darwinia-network
	"darwinia-support/std",
	# encointer
	"substrate-fixed/std",
	# paritytech
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
]

try-runtime = ["frame-support/try-runtime"]
