[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Support code for Darwinia runtime"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-support"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.10"

[dependencies]
# crates.io
codec                 = { package = "parity-scale-codec", version = "2.3", default-features = false, features = ["derive"] }
ethereum              = { version = "0.11.1", default-features = false, features = ["with-codec"] }
impl-trait-for-tuples = { version = "0.2" }
scale-info            = { version = "1.0", default-features = false, features = ["derive"] }
sha3                  = { version = "0.9", default-features = false }
# darwinia-network
ethereum-primitives = { default-features = false, path = "../../primitives/ethereum" }
# paritytech
bp-messages     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "darwinia-v0.12.2" }
bp-runtime      = { default-features = false, git = "https://github.com/darwinia-network/darwinia-bridges-substrate", branch = "darwinia-v0.12.2" }
frame-support   = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
frame-system    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
pallet-balances = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-core         = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-io           = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-runtime      = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }
sp-std          = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.2" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"ethereum/std",
	"scale-info/std",
	"sha3/std",
	# darwinia-network
	"ethereum-primitives/std",
	# paritytech
	"frame-support/std",
	"pallet-balances/std",
	"bp-messages/std",
	"bp-runtime/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
]
