[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet to manage treasury"
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "darwinia-treasury"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "1.3.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.7", default-features = false, features = ["derive"] }
serde = { version = "1.0.123", optional = true, features = ["derive"] }
# darwinia
darwinia-support = { default-features = false, path = "../support" }
# substrate
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.2.1-darwinia" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.2.1-darwinia" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.2.1-darwinia" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "v2.2.1-darwinia" }

[dev-dependencies]
# darwinia
darwinia-balances = { path = "../balances" }
# substrate
sp-core    = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.2.1-darwinia" }
sp-io      = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.2.1-darwinia" }
sp-storage = { git = "https://github.com/darwinia-network/substrate.git", tag = "v2.2.1-darwinia" }

[features]
default = ["std"]

std = [
	"crates-std",
	"darwinia-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
darwinia-std  = ["darwinia-support/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
