[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet to manage treasury"
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "darwinia-treasury"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.1.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true, features = ["derive"] }
# darwinia
darwinia-support = { default-features = false, path = "../support" }
# substrate
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }

[dev-dependencies]
# darwinia
darwinia-balances = { path = "../balances" }
# substrate
sp-core    = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-io      = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }
sp-storage = { git = "https://github.com/darwinia-network/substrate.git", tag = "rococo-v1.1" }

[features]
default = ["std"]

std = [
	"crates-std",
	"darwinia-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
darwinia-std  = ["darwinia-support/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
