[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet to manage treasury"
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "darwinia-treasury"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.5.0"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true, features = ["derive"] }
# darwinia-network
darwinia-support = { default-features = false, path = "../support" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }

[dev-dependencies]
# darwinia-network
darwinia-balances = { path = "../balances" }
# paritytech
sp-core    = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-io      = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-storage = { git = "https://github.com/darwinia-network/substrate", branch = "main" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"serde",
	# darwinia-network
	"darwinia-support/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
