[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "FRAME pallet for manage vesting"
edition     = "2018"
homepage    = "https://darwinia.network/"
license     = "GPL-3.0"
name        = "darwinia-vesting"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common/"
version     = "2.6.4"

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
# darwinia-network
darwinia-support = { default-features = false, path = "../support" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
frame-system  = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-runtime    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-std        = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "main" }

[dev-dependencies]
# crates.io
hex-literal = { version = "0.3.1" }
# darwinia-network
darwinia-balances = { path = "../balances" }
# paritytech
sp-core    = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-io      = { git = "https://github.com/darwinia-network/substrate", branch = "main" }
sp-storage = { git = "https://github.com/darwinia-network/substrate", branch = "main" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	# darwinia-network
	"darwinia-support/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
