[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
build       = "build.rs"
description = "Darwinia Runtime Module Library Node"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "drml"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.8.4"

# TODO: Consider rename this repo to darwinia-runtime-module-library
[[bin]]
name = "drml"

[dependencies]
# crates.io
log       = { version = "0.4" }
structopt = { version = "0.3", optional = true }
# darwinia-network
bsc-primitives = { path = "../../primitives/bsc" }
drml-rpc       = { default-features = false, path = "../rpc" }
drml-service   = { default-features = false, path = "../service" }
# paritytech
frame-benchmarking-cli = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sc-cli                 = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sc-service             = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
sp-core                = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
try-runtime-cli        = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
# frontier
fp-consensus = { git = "https://github.com/darwinia-network/frontier", branch = "udpate-tmp" }

[build-dependencies]
# paritytech
substrate-build-script-utils = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }
try-runtime-cli              = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.1" }

[features]
default = [
	"cli",
	"db",
	"full-node",
	"wasmtime",
]

cli = [
	# crates.io
	"structopt",
	# paritytech
	"sc-cli",
	"sc-service",
]

db = ["drml-service/db"]

full-node = ["drml-service/full-node"]

wasmtime = ["sc-cli/wasmtime"]

evm-tracing = ["drml-service/evm-tracing"]

template = ["drml-service/template"]

runtime-benchmarks = [
	# darwinia-network
	"drml-service/runtime-benchmarks",
	# paritytech
	"frame-benchmarking-cli",
]

try-runtime = [
	# darwinia-network
	"drml-service/try-runtime",
	# paritytech
	"try-runtime-cli",
]
