[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
build       = "build.rs"
description = "Darwinia Runtime Module Library Node"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "drml"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.9.0"

# TODO: Consider rename this repo to darwinia-runtime-module-library
[[bin]]
name = "drml"

[dependencies]
# crates.io
log       = { version = "0.4" }
structopt = { version = "0.3", optional = true }
# darwinia-network
drml-node-service = { path = "../service" }
drml-primitives   = { path = "../primitives", optional = true }
drml-rpc          = { path = "../rpc" }
# paritytech
frame-benchmarking-cli = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sc-cli                 = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sc-service             = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
sp-core                = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
try-runtime-cli        = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
# frontier
fp-consensus = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.12.4" }

[build-dependencies]
# paritytech
substrate-build-script-utils = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }
try-runtime-cli              = { optional = true, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.12.4" }

[features]
default = [
	"cli",
	"db",
	"full-node",
	"wasmtime",
]

cli = [
	# crates.io
	"structopt",
	# paritytech
	"sc-cli",
	"sc-service",
]

db = ["drml-node-service/db"]

full-node = ["drml-node-service/full-node"]

wasmtime = ["sc-cli/wasmtime"]

fast-runtime = ["drml-node-service/fast-runtime"]

evm-tracing = ["drml-node-service/evm-tracing"]

template = ["drml-node-service/template"]

runtime-benchmarks = [
	# darwinia-network
	"drml-primitives",
	"drml-node-service/runtime-benchmarks",
	# paritytech
	"frame-benchmarking-cli",
]

try-runtime = [
	# darwinia-network
	"drml-primitives",
	"drml-node-service/try-runtime",
	# paritytech
	"try-runtime-cli",
]
