[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "DRML node runtime primitives"
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "drml-primitives"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia-common"
version     = "2.10.1"

[dependencies]
# paritytech
sp-core    = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.13.0" }
sp-runtime = { default-features = false, git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.13.0" }
# darwinia-network
darwinia-support = { default-features = false, path = "../../frame/support" }

[features]
default = ["std"]

std = [
	# paritytech
	"sp-core/std",
	"sp-runtime/std",
	# darwinia-network
	"darwinia-support/std",
]

fast-runtime = []
